[package]
name = "js-replacer"
version = "0.1.0"
description = "A package that replaces neccessary tokens in js code files so it can be used in proxy."
authors = ["YT-Gh0st"]
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dprint-swc-ext = "0.17.0"
neon = "1"
regex = "1.10.5"
swc_common = "0.34.3"
swc_ecma_ast = "0.115.1"
swc_ecma_parser = "0.146.8"
swc_ecma_visit = "0.101.0"
